--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,53 @@ html, body {
   padding: 0;
   overflow-x: hidden; /* 💥 This is crucial */
 }
+
+.canvasContainer {
+  position: fixed;
+  left: 4%;
+  transform: translateX(-50%);
+  margin: auto;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  transform-origin: center center;
+}
+
+.canvasWrapper {
+  height: '100vh';
+  width: '100%';
+  position: 'fixed';
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+
+@media (min-width: 768px) {
+  .bottomContainer {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1136px) {
+  .bottomContainer {
+    max-width: 1136px;
+  }
+}
+
+@media (max-width: 760px) {
+  .canvasContainer {
+    max-width: 100%;
+    max-height: 45vh;
+    top: 20%;
+  }
+
+
+}
+@media (min-width: 760px) and (max-width: 1024px) {
+  .canvasWrapper {
+    max-width: 100%;
+    max-height: 70vh;
+    top: 20%;
+  }
+}
